# ROS2-Slam-EKF-application

./: .gitignore  README.md  ref_pose.csv
baginfo/: 1_bag_info.txt  2_bag_info.txt
dev2_ws/: kalman_pose.csv
dev2_ws/src/kalman_msgs/: CMakeLists.txt  package.xml
dev2_ws/src/kalman_msgs/msg/: Chca.msg  Chcv.msg
dev2_ws/src/my_package/: CMakeLists.txt  package.xml
dev2_ws/src/my_package/launch/: slam.launch.py
dev2_ws/src/my_package/param/: slam.yaml
dev2_ws/src/my_package/rviz/: mapping.rviz
dev2_ws/src/my_package/src/: mapping.cpp  my_slam_component.cpp  my_slam_node.cpp
graph-output/: autobin.ipynb  kitti.ipynb  output25_jul.py  scanmatching.ipynb
install/: local_setup.sh  setup.sh
install/chcv_msgs/share/chcv_msgs/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_ekf/share/my_ekf/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_scanmatching/share/my_scanmatching/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/my_slam/share/my_slam/: local_setup.dsv  package.bash  package.sh  package.zsh
log/: latest_build
result/: .~lock.ekf_output.ods#  ekf_output.ods  real_output.ods  real_output.txt
result/autobin_result/output1/: covariance_output.csv  ekf_correct_output.csv  ekf_predict_output.csv  real_output.csv
result/autobin_result/output_13_jul/ekf_chca_direct1/: current_pose_ekf_chca.csv  kalman_pose_chca.csv  ref_pose.csv
result/autobin_result/output_13_jul/ekf_chcv_direct1/: current_pose_ekf_chcv.csv  kalman_pose_chcv.csv  ref_pose.csv
result/autobin_result/output_13_jul/ekf_chcv_direct7/: current_pose_chcv_direct7.csv  kalman_pose_direct7_chcv.csv  ref_pose.csv
result/autobin_result/output_13_jul/ekf_chcv_gicp/: current_pose_gicp_chcv.csv  kalman_pose_gicp_chcv.csv  ref_pose.csv
result/autobin_result/output_13_jul/ekf_chcv_kdtree/: current_pose_chcv_kdtree.csv  kalman_pose_kdtree_chcv.csv  ref_pose.csv
result/autobin_result/output_13_jul/no_ekf_direct1/: current_pose_no_ekf.csv  kalman_pose_no_ekf.csv  ref_pose.csv
result/autobin_result/output_25_jul/d1_chca_7/: estimated_pose.kitti
result/autobin_result/output_25_jul/d1_chcv_7/: current_pose.csv  current_pose.tum  d1_chcv  d1_chcv_ref  kalman_pose.csv  ref_pose.csv  ref_pose.tum
result/autobin_result/output_25_jul/d1_no_7/: current_pose.csv  d1_non  kalman_pose.csv  ref_pose.csv
result/autobin_result/output_25_jul/d7_chca_7/: current_pose.csv  d7_chca  kalman_pose.csv  ref_pose.csv  reference.kitti
result/autobin_result/output_25_jul/d7_chcv_7/: current_pose.csv  d7_chcv_ref  estimated_pose.kitti  kalman_pose.csv  ref_pose.csv
result/autobin_result/output_25_jul/d7_non_7/: current_pose.csv  estimated_pose.kitti  kalman_pose.csv  ref_pose.csv
result/autobin_result/output_25_jul/icp_chca_52/: current_pose.csv  kalman_pose.csv  ref_pose.csv
result/autobin_result/output_25_jul/icp_chca_7/: current_pose.csv  icp_chca  kalman_pose.csv  ref_pose.csv
result/autobin_result/output_25_jul/icp_chca_9/: current_pose.csv  kalman_pose.csv  ref_pose.csv
result/autobin_result/output_25_jul/icp_chcv_52/: current_pose.csv  kalman_pose.csv  ref_pose.csv
result/autobin_result/output_25_jul/icp_chcv_7/: current_pose.csv  estimated_pose.kitti  kalman_pose.csv  ref_pose.csv
result/autobin_result/output_25_jul/icp_chcv_9/: current_pose.csv  kalman_pose.csv  ref_pose.csv
result/autobin_result/output_25_jul/icp_non_7/: current_pose.csv  icp_non  kalman_pose.csv  ref_pose.csv
result/autobin_result/output_25_jul/kd_chca_52/: current_pose.csv  estimated_pose.kitti  kalman_pose.csv  kd_chca_52_ref  ref_pose.csv
result/autobin_result/output_25_jul/kd_chca_7/: current_pose.csv  kalman_pose.csv  kd_chca  ref_pose.csv
result/autobin_result/output_ekf_2_jul/: current_pose.csv  ref_pose.csv
result/autobin_result/output_ekf_2_jul_(2)/: current_pose.csv  ref_pose.csv
result/autobin_result/output_odom/: covariance_output.csv  ekf_correct_output.csv  ekf_predict_output.csv  real_output.csv
result/autobin_result/output_odom2/: covariance_output.csv  ekf_correct_output.csv  ekf_predict_output.csv  real_output.csv
result/autobin_result/output_scanmatching_ekf/: .~lock.current_pose.csv#  .~lock.ekf_scanmatching_ref_pose.csv#  current_pose.csv  ekf_scanmatching_ref_pose.csv  no_ekf_current_pose.csv
result/kitti_result/output1/: covariance_output.csv  ekf_correct_output.csv  ekf_predict_output.csv  real_output.csv
ros2_ws/src/chcv_msgs/: CMakeLists.txt
ros2_ws/src/lidarslam_msgs/: package.xml
ros2_ws/src/my_ekf/: CMakeLists.txt  package.xml
ros2_ws/src/my_ekf/launch/: ekf.launch.py
ros2_ws/src/my_ekf/src/: ekf_node.cpp
ros2_ws/src/my_ekf_odom/: CMakeLists.txt  package.xml
ros2_ws/src/my_scanmatching/: CMakeLists.txt  package.xml
ros2_ws/src/my_scanmatching_model_chcv/: CMakeLists.txt  package.xml
ros2_ws/src/my_scanmatching_model_chcv/include/my_scanmatching_model_chcv/: scanmatching_model_chcv_component.hpp  scanmatching_model_chcv_ekf.hpp
ros2_ws/src/my_scanmatching_model_chcv/launch/: scanmatching.launch.py
ros2_ws/src/my_scanmatching_model_chcv/param/: scanmatching.yaml
ros2_ws/src/my_scanmatching_model_chcv/src/: scanmatching_model_chcv_component.cpp  scanmatching_model_chcv_node.cpp
script/: evo.sh  evo2.sh  evores.sh  evotest.sh  evotest2.sh  rosbagplay.sh  rosbagrecord.sh
script/kitti/: NDT_D1_CA_ref  estimated_pose.kitti
script/rosbag/: metadata.yaml  rosbag_0.db3
script/tum/: ICP_KD_NON_ref  NDT_D1_CA
src/chcv_msgs/: CMakeLists.txt  package.xml
src/chcv_msgs/msg/: Cov.msg  chcv.msg
src/my_ekf/: CMakeLists.txt
src/my_ekf/launch/: ekf.launch.py
src/my_ekf/param/: ekf.yaml
src/my_ekf/src/: ekf_component.cpp  ekf_node.cpp
src/my_ekf_kitti/: CMakeLists.txt  package.xml
src/my_ekf_kitti/param/: ekf.yaml
src/my_ekf_kitti/src/: ekf_kitti_component.cpp  ekf_kitti_node.cpp
src/my_scanmatching/: CMakeLists.txt
src/my_slam/: CMakeLists.txt  package.xml
(+208 files in other folders)
